# Molar

./: .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE  README.md
src/: main.cpp
src/ui/: main.qml
src/ui/delegates/: AxisDelegate.qml  CMakeLists.txt  FileDelegate.qml
src/ui/pages/: CMakeLists.txt
src/ui/pages/homepage/: HomePage.qml
